<resources>
    <string name="app_name">Transit 808</string>

    <string name="hello_world">Hello world</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">Arrival Times</string>
    <string name="title_section3">Trips</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="hea_arrival_url">http://api.thebus.org/arrivals/?key=API_key&amp;stop=stop_ID</string>
    <string name="hea_route_url">http://api.thebus.org/route/?key=API_key&amp;route=route_name</string>
    <string name="title_activity_main">Transit 808</string>
    <string name="title_activity_arrival">ArrivalActivity</string>
    <string name="arrivalHelpText">Enter Street Name/Bus Stop Number</string>
    <string name="title_activity_bus_stop_search">Bus Stop Search</string>
    <string name="search_hint">Enter Street Name or Bus Stop Number</string>
    <string name="title_activity_stop_details">Bus Stop Arrival Time</string>
    <string name="bus_stop_label">Bus Stop:</string>
    <string name="from">From</string>
    <string name="to"> To </string>
    <string name="title_activity_trips">Trips</string>
    <string name="load_directions">Create Trip</string>
    <string name="title_activity_maps">Map</string>
    <string name="clear_button">X</string>
    <string name="fill_from"><u>Use Current Location</u></string>
    <string name="invalid_trip">Could not retrieve valid trip.</string>
    <string name="title_activity_route">Route</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="nav_title">Menu</string>
    <string name="clear_fields">Clear Fields</string>
    <string name="favorite_stops_label">Saved Stops</string>
    <string name="saved_trips">Saved Trips</string>
    <string name="no_stops">No stops saved.</string>
    <string name="right_arrow">→</string>
    <string name="arrival_text">Arriving Time: </string>
    <string name="stop_add_button">Remember This Stop</string>
    <string name="stop_remove_button">Forget This Stop</string>
    <string name="no_trips">No trips saved.</string>
    <string name="trip_add_button">Remember This Trip</string>
    <string name="trip_remove_button">Remove This Trip</string>
    <string name="bus_stop_number_label">Bus Stop # </string>
    <string name="title_activity_bus_stop_map_search">BusStopMapSearch</string>
    <string name="title_activity_bus_stop_menu_search">BusStopMenuSearch</string>
    <string name="searchByText">Search By Text</string>
    <string name="searchByMap">Search By Map</string>
    <string name="view_map">View On Map</string>
    <string name="view_stop"><u>View Bus Stop</u></string>
    <string name="search_by">Search By:</string>
    <string name="view_by">View By:</string>
    <string name="no_arrival_information">No stops scheduled for this stop.</string>
    <string name="stop_error">Could not retrieve arrival information. Please try again later.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_delete">Delete </string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_delete2">from Saved Bus Stops?</string>
    <string name="title_activity_route_map">RouteMap</string>
    <string name="missingInput">Start and End location required.</string>
    <string name="missingDestination">End location is missing.</string>
    <string name="missingOrigin">Start Location is missing.</string>
</resources>
