<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="ics466uhm.transit808.MainActivity">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:id="@+id/savedStops">

    <TextView
        android:id="@+id/favorite_stops_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/favorite_stops_label"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/divider_stops"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/saved_stops_empty"
        android:textColor="@color/abc_primary_text_material_light"
        android:text="@string/no_stops"
        android:paddingTop="25dp"
        android:visibility="gone"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saved_stops_list"
        android:animateLayoutChanges="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:id="@+id/savedTrips">

    <TextView
        android:id="@+id/saved_trips_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/saved_trips"
        android:paddingTop="25dp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/divider_trips"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/abc_primary_text_material_light"
        android:paddingTop="25dp"
        android:id="@+id/saved_trips_empty"
        android:text="@string/no_trips"
        />

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/saved_trips_list"
        android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>

    <!-- Navigation Drawer UI -->
    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee"
        />
</android.support.v4.widget.DrawerLayout>
