<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:alignmentMode="alignBounds"
    android:orientation="vertical"
    android:padding="16dp"
    android:useDefaultMargins="true"
    android:columnCount="1">

    <TextView
        android:id="@+id/from_label"
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:textColor="?android:textColorSecondary"/>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    <AutoCompleteTextView
        android:id="@+id/from"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:drawablePadding="8dp"
        android:completionThreshold="3"
        android:hint="Start Location"/>

        <TextView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:background="@drawable/ic_cancel_grey600_48dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:onClick="clearFrom"/>

    </FrameLayout>

    <TextView
        android:id="@+id/fillFrom"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="loadCurrentLocation"
        android:clickable="true"
        android:textSize="12sp"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/fill_from"/>

    <TextView
        android:id="@+id/to_label"
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textColor="?android:textColorSecondary"/>


    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    <AutoCompleteTextView
        android:id="@+id/to"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:completionThreshold="3"
        android:hint="End Location"/>

    <TextView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:background="@drawable/ic_cancel_grey600_48dp"
        android:layout_gravity="right|center_vertical"
        android:layout_marginRight="10dp"
        android:clickable="true"
        android:onClick="clearTo"/>

</FrameLayout>

    <Button
        android:id="@+id/load_directions"
        android:layout_columnSpan="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/load_directions"
        android:onClick="createTrip"/>

</LinearLayout>

    <!-- Navigation Drawer UI -->
    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee"
        />
</android.support.v4.widget.DrawerLayout>

