<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ics466uhm.transit808.StopDetails"
    android:orientation="vertical">

    <TextView
        android:id="@+id/stop_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:textColorPrimary"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addStop"
        android:drawableLeft="@android:drawable/star_on"
        android:text="@string/stop_add_button"
        android:textSize="12sp"
        android:visibility="visible"
        android:onClick="saveStop"
        android:gravity="center"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/removeStop"
        android:drawableLeft="@android:drawable/star_off"
        android:text="@string/stop_remove_button"
        android:textSize="12sp"
        android:visibility="gone"
        android:onClick="removeStop"
        android:gravity="center"
        />

        <Button
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_refresh_black_48dp"
            android:text="Refresh"
            android:textSize="12sp"
            android:gravity="center"
            android:onClick="refresh"/>

        </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:id="@+id/loading"
        android:layout_gravity="center_horizontal"/>

    <ListView
        android:id="@+id/stop_times"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"></ListView>

    <TextView
        android:id="@+id/emptyList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_arrival_information"
        android:visibility="gone"/>

</LinearLayout>

    <!-- Navigation Drawer UI -->
<ListView
android:id="@+id/navList"
android:layout_width="200dp"
android:layout_height="match_parent"
android:layout_gravity="left|start"
android:background="#ffeeeeee"
    />
    </android.support.v4.widget.DrawerLayout>